--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,12 +17,6 @@
 
         <!-- …Toolbar, other layouts, other elements… -->
 
-        <Button
-            android:id="@+id/click_me"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/click_me" />
-
         <TextView
             android:id="@+id/snackbar_popup"
             android:layout_width="match_parent"
@@ -34,6 +28,18 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/click_me"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/calculate"
+            app:layout_constraintBottom_toTopOf="@+id/spinner_right"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.847" />
 
         <Spinner
             android:id="@+id/spinner_right"
@@ -72,15 +78,41 @@
             app:layout_constraintVertical_bias="0.484" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/toast_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="@string/toast_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/spinner_left" />
+
+        <EditText
+            android:id="@+id/left_result"
+            android:layout_width="184dp"
+            android:layout_height="72dp"
+            android:text=""
+            android:inputType="numberDecimal"
+            app:layout_constraintBottom_toTopOf="@+id/toast_text"
+            app:layout_constraintEnd_toStartOf="@+id/right_result"
+            app:layout_constraintHorizontal_bias="0.48"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/spinner_left"
+            app:layout_constraintVertical_bias="0.112" />
+
+        <EditText
+            android:id="@+id/right_result"
+            android:layout_width="187dp"
+            android:layout_height="68dp"
+            android:text=""
+            android:inputType="numberDecimal"
+            app:layout_constraintBottom_toTopOf="@+id/toast_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/left_result"
+            app:layout_constraintTop_toBottomOf="@+id/spinner_right"
+            app:layout_constraintVertical_bias="0.107" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.design.widget.CoordinatorLayout>
